# rabelo-lua

./: .gitignore  Dockerfile  README.md  README_COMPLETO.md  SISTEMA_CONFIGURADO.md  docker-compose.yml  iniciar_docker.sh  install_test_deps.sh  parar_docker.sh  requirements.txt  requirements_fixed.txt  start.py  start_fixed.sh  start_windows.bat  test_all_services.py  verificar_sistema.sh
backend/: Dockerfile  __init__.py  create_users.py  fix_login.py  install_voice_deps.sh  main.py  main_fixed.py  main_flask_old.py  pyproject.toml  requirements.txt  requirements_kokoro.txt  requirements_minimal.txt  requirements_modern.txt  test_lua_system.py  verify_fix.py
backend/core/: __init__.py  config.py  logger.py
backend/modules/: __init__.py
backend/modules/lua/: __init__.py  assistant.py  personality.py
backend/modules/tts/: __init__.py  kokoro_engine.py
backend/src/: __init__.py
backend/src/routes/: ai_assistant_enhanced.py  ai_assistant_ollama.py  ai_voice.py  kokoro_voice.py  voice_config.py
backend/src/services/: intent_recognition.py  kokoro_voice_engine.py  lua_consciousness.py  voice_commands_enhanced.py  voice_engine.py  voice_engine_lite.py
frontend/: Dockerfile  index.html  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  Encomendas.jsx  Header.jsx  IALuaEnhanced.jsx  JarvisAI.jsx  JarvisAI_Enhanced.jsx  KokoroVoiceSelector.jsx  Login.jsx  NetflixLogin.jsx  Vales.jsx  VoiceControls.jsx  VoiceSelector.jsx
frontend/src/components/ui/: chart.jsx
frontend/src/services/: api.js
frontend/src/utils/: audioUtils.js
